Disable social media icons in footer
Comment out social media icons section in footer

--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
                 <span class="text-xl font-bold text-white tracking-tighter">Petal Chain</span>
             </div>
             <p class="text-sm">Source: DHET 2026 Directory & Registers. Registered Institutions only. Private list curated for leading providers.</p>
-            <div class="flex gap-6 text-xl">
+            <!--<div class="flex gap-6 text-xl">
                 <i class="fab fa-twitter hover:text-white cursor-pointer transition-colors"></i>
                 <i class="fab fa-linkedin hover:text-white cursor-pointer transition-colors"></i>
-            </div>
+            </div>-->
         </div>
     </footer>
 
